# tcp2serial

./: Cargo.toml  README.md
src/: lib.rs  main.rs  no_systemd.rs  shared_resource.rs  syslog.rs  systemd.rs
systemd/: tcp2serial.service
